--- a/index.html
+++ b/index.html
@@ -10,6 +10,53 @@
         <title>Real Estate</title>
     </head>
     <body>
-        <h1>Tieu de cua project</h1>
+        <header class="fixed-header">
+            <div class="content">
+                <nav class="navbar">
+                    <!-- Logo -->
+                    <a class="logo" href="#">
+                        <img src="./assets/img/logo.png" alt="Besnik" />
+                    </a>
+                    <!-- Navigation -->
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Features</a></li>
+                        <li><a href="#">Services</a></li>
+                        <li><a href="#">Resources</a></li>
+                        <li><a href="#">Contact</a></li>
+                    </ul>
+                    <!-- Sign in/Sign up -->
+                    <div class="actions">
+                        <a class="sign-in" href="#">Sign in</a>
+                        <a class="btn sign-up" href="#">Sign up</a>
+                    </div>
+                </nav>
+            </div>
+        </header>
+
+        <main>
+            <!-- Hero -->
+            <div class="hero-wrap">
+                <div class="content">
+                    <div class="infor">
+                        <p class="sub-title">Welcome to Besnik Agency</p>
+                        <h1 class="title">
+                            Discover a place you'll love to live.
+                        </h1>
+                        <p class="desc">
+                            Get the best real estate deals first, before they
+                            hit the mass market! HOT FORECLOSURE DEALS with one
+                            simple search.
+                        </p>
+                        <a href="#" class="btn hero-cta">More About Us</a>
+                    </div>
+                    <img
+                        class="hero-img"
+                        src="./assets/img/hero-img.svg"
+                        alt="Discover a place you'll love to live"
+                    />
+                </div>
+            </div>
+        </main>
     </body>
 </html>
