--- a/index.html
+++ b/index.html
@@ -7,34 +7,43 @@
         <link rel="stylesheet" href="./assets/css/reset.css" />
         <link rel="stylesheet" href="./assets/fonts/stylesheet.css" />
         <link rel="stylesheet" href="./assets/css/styles.css" />
+        <!-- Font Awesome -->
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+            integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+            crossorigin="anonymous"
+            referrerpolicy="no-referrer"
+        />
+
         <title>Real Estate</title>
     </head>
     <body>
-        <header class="fixed-header">
-            <div class="content">
-                <nav class="navbar">
-                    <!-- Logo -->
-                    <a class="logo" href="#">
-                        <img src="./assets/img/logo.png" alt="Besnik" />
-                    </a>
-                    <!-- Navigation -->
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Features</a></li>
-                        <li><a href="#">Services</a></li>
-                        <li><a href="#">Resources</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                    <!-- Sign in/Sign up -->
-                    <div class="actions">
-                        <a class="sign-in" href="#">Sign in</a>
-                        <a class="btn sign-up" href="#">Sign up</a>
-                    </div>
-                </nav>
-            </div>
-        </header>
-
         <main>
+            <!-- Header -->
+            <header class="fixed-header">
+                <div class="content">
+                    <nav class="navbar">
+                        <!-- Logo -->
+                        <a class="logo" href="#">
+                            <img src="./assets/img/logo.png" alt="Besnik" />
+                        </a>
+                        <!-- Navigation -->
+                        <ul>
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Features</a></li>
+                            <li><a href="#">Services</a></li>
+                            <li><a href="#">Resources</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+                        <!-- Sign in/Sign up -->
+                        <div class="actions">
+                            <a class="sign-in" href="#">Sign in</a>
+                            <a class="btn sign-up" href="#">Sign up</a>
+                        </div>
+                    </nav>
+                </div>
+            </header>
             <!-- Hero -->
             <div class="hero-wrap">
                 <div class="content">
@@ -55,6 +64,83 @@
                         src="./assets/img/hero-img.svg"
                         alt="Discover a place you'll love to live"
                     />
+                </div>
+            </div>
+
+            <!-- Client -->
+            <div class="client">
+                <div class="content">
+                    <div class="content-review">
+                        <div class="quantity-client">
+                            <a class="logo" href="#">
+                                <img src="./assets/img/logo.png" alt="Besnik" />
+                            </a>
+                            <p class="desc-company">
+                                More than 45,000+ companies trust besnik
+                            </p>
+                        </div>
+                        <div class="rate">
+                            <div class="star-icon">
+                                <i
+                                    class="fa-solid fa-star"
+                                    style="color: #f7cc6a"
+                                ></i>
+                                <i
+                                    class="fa-solid fa-star"
+                                    style="color: #f7cc6a"
+                                ></i>
+                                <i
+                                    class="fa-solid fa-star"
+                                    style="color: #f7cc6a"
+                                ></i>
+                                <i
+                                    class="fa-solid fa-star"
+                                    style="color: #f7cc6a"
+                                ></i>
+                                <i
+                                    class="fa-solid fa-star"
+                                    style="color: #f7cc6a"
+                                ></i>
+                            </div>
+                            <div class="desc-rate">
+                                5 Star Ratings (2k+ Review)
+                            </div>
+                        </div>
+                    </div>
+                    <div class="company">
+                        <a href="#" class="company-logo">
+                            <img
+                                src="./assets/img/logo-meundies.svg"
+                                alt="logo-meundies"
+                            />
+                        </a>
+                        <a href="#" class="company-logo">
+                            <img
+                                src="./assets/img/logo-slack.svg"
+                                alt="logo-meundies"
+                            />
+                        </a>
+                        <div class="main-company">
+                            <a href="#" class="company-logo">
+                                <img
+                                    src="./assets/img/logo-amazon.svg"
+                                    alt="logo-meundies"
+                                />
+                            </a>
+                        </div>
+                        <a href="#" class="company-logo">
+                            <img
+                                src="./assets/img/logo-woo.svg"
+                                alt="logo-meundies"
+                            />
+                        </a>
+                        <a href="#" class="company-logo">
+                            <img
+                                src="./assets/img/logo-sitepoint.svg"
+                                alt="logo-meundies"
+                            />
+                        </a>
+                    </div>
                 </div>
             </div>
         </main>
