--- a/index.html
+++ b/index.html
@@ -143,6 +143,69 @@
                     </div>
                 </div>
             </div>
+            <!-- Guides -->
+            <div class="guides">
+                <div class="content">
+                    <h2 class="intro">How its works?</h2>
+                    <div class="desc-intro">
+                        Everything you need to know when you're looking to buy,
+                        rent, or sell - all in one place.
+                    </div>
+                    <div class="guides-type">
+                        <div class="guides-item">
+                            <img
+                                src="./assets/img/icon-buyer.svg"
+                                alt="Buyer"
+                                class="icon"
+                            />
+                            <div class="desc">Buyer Guides</div>
+                            <a href="" class="text-click">
+                                <p>How to buy</p>
+                                <img
+                                    src="./assets/img/arrow-right.svg"
+                                    alt="arrow-right"
+                                    class="arrow-right"
+                                />
+                            </a>
+                        </div>
+                        <div class="guides-item">
+                            <img
+                                src="./assets/img/icon-renter.svg"
+                                alt="Renter"
+                                class="icon"
+                            />
+                            <div class="desc">Renter Guides</div>
+                            <a href="" class="text-click">
+                                <p>How to rent</p>
+                                <img
+                                    src="./assets/img/arrow-right.svg"
+                                    alt="arrow-right"
+                                    class="arrow-right"
+                                />
+                            </a>
+                        </div>
+                        <div class="guides-item">
+                            <img
+                                src="./assets/img/icon-seller.svg"
+                                alt="Seller"
+                                class="icon"
+                            />
+                            <div class="desc">Seller Guides</div>
+                            <a href="" class="text-click">
+                                <p>How to sell</p>
+                                <img
+                                    src="./assets/img/arrow-right.svg"
+                                    alt="arrow-right"
+                                    class="arrow-right"
+                                />
+                            </a>
+                        </div>
+                    </div>
+                    <div class="guide-cta">
+                        <a href="#!" class="btn">Sell Full Guidelines</a>
+                    </div>
+                </div>
+            </div>
         </main>
     </body>
 </html>
