feartured properties done

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <title>Real Estate</title>
     </head>
-    <body>
+    <body style="height: 10000px">
         <main>
             <!-- Header -->
             <header class="fixed-header">
@@ -44,6 +44,7 @@
                     </nav>
                 </div>
             </header>
+
             <!-- Hero -->
             <div class="hero-wrap">
                 <div class="content">
@@ -143,6 +144,7 @@
                     </div>
                 </div>
             </div>
+
             <!-- Guides -->
             <div class="guides">
                 <div class="content">
@@ -206,6 +208,164 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Fearture -->
+            <div class="fearture">
+                <div class="content">
+                    <div class="header">
+                        <h2 class="title">Featured Properties</h2>
+                        <div class="detail">
+                            <div class="desc">
+                                Everything you need to know when you're looking
+                            </div>
+                            <a href="" class="view-all">
+                                <span class="text">View All Properties</span>
+                                <img
+                                    src="./assets/img/arrow-right.svg"
+                                    alt="Arrow right"
+                                    class="arrow-right"
+                                />
+                            </a>
+                        </div>
+                    </div>
+                    <div class="list">
+                        <!-- Item 1 -->
+                        <div class="item">
+                            <img
+                                src="./assets/img/feartured-1.jpg"
+                                alt="Nikko Apartments"
+                                class="thumnail"
+                            />
+                            <div class="body">
+                                <h3 class="line-clamp">
+                                    Nikko Apartments
+                                <span
+                                    class="desc line-clamp"
+                                    style="--line-clamp: 3"
+                                >
+                                    8502PrestonRd.Inglewood,Maine98280
+                                </span>
+                                <div class="list-prop">
+                                    <div class="item">
+                                        <img
+                                            src="./assets/img/icon-bed.svg"
+                                            alt="Beds"
+                                            class="icon"
+                                        />
+                                        <span class="label">5 Beds</span>
+                                    </div>
+                                    <div class="item">
+                                        <img
+                                            src="./assets/img/icon-bed.svg"
+                                            alt="Beds"
+                                            class="icon"
+                                        />
+                                        <span class="label">2 both</span>
+                                    </div>
+                                    <div class="item">
+                                        <img
+                                            src="./assets/img/icon-bed.svg"
+                                            alt="Beds"
+                                            class="icon"
+                                        />
+                                        <span class="label">2000 Sqft</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Item 2 -->
+                        <div class="item">
+                            <img
+                                src="./assets/img/feartured-2.jpg"
+                                alt="Nikko Apartments"
+                                class="thumnail"
+                            />
+                            <div class="body">
+                                <h3 class="line-clamp">
+                                    CouCou Homestead
+                                <span
+                                    class="desc line-clamp"
+                                    style="--line-clamp: 3"
+                                >
+                                    8502PrestonRd.Inglewood,Maine98280
+                                </span>
+                                <div class="list-prop">
+                                    <div class="item">
+                                        <img
+                                            src="./assets/img/icon-bed.svg"
+                                            alt="Beds"
+                                            class="icon"
+                                        />
+                                        <span class="label">5 Beds</span>
+                                    </div>
+                                    <div class="item">
+                                        <img
+                                            src="./assets/img/icon-bed.svg"
+                                            alt="Beds"
+                                            class="icon"
+                                        />
+                                        <span class="label">2 both</span>
+                                    </div>
+                                    <div class="item">
+                                        <img
+                                            src="./assets/img/icon-bed.svg"
+                                            alt="Beds"
+                                            class="icon"
+                                        />
+                                        <span class="label">2000 Sqft</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Item 3 -->
+                        <div class="item">
+                            <img
+                                src="./assets/img/feartured-3.jpg"
+                                alt="Nikko Apartments"
+                                class="thumnail"
+                            />
+                            <div class="body">
+                                <h3 class="line-clamp">
+                                    Lavis 18 Residence
+                                <span
+                                    class="desc line-clamp"
+                                    style="--line-clamp: 3"
+                                >
+                                    8502PrestonRd.Inglewood,Maine98280
+                                </span>
+                                <div class="list-prop">
+                                    <div class="item">
+                                        <img
+                                            src="./assets/img/icon-bed.svg"
+                                            alt="Beds"
+                                            class="icon"
+                                        />
+                                        <span class="label">5 Beds</span>
+                                    </div>
+                                    <div class="item">
+                                        <img
+                                            src="./assets/img/icon-bed.svg"
+                                            alt="Beds"
+                                            class="icon"
+                                        />
+                                        <span class="label">2 both</span>
+                                    </div>
+                                    <div class="item">
+                                        <img
+                                            src="./assets/img/icon-bed.svg"
+                                            alt="Beds"
+                                            class="icon"
+                                        />
+                                        <span class="label">2000 Sqft</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            
         </main>
     </body>
 </html>
