--- a/index.html
+++ b/index.html
@@ -365,7 +365,79 @@
                 </div>
             </div>
 
-            
+            <!-- Stats -->
+            <div class="stats">
+                <div class="content">
+                    <div class="row">
+                        <!-- Image and Trending Left -->
+                        <div class="img-block">
+                            <img class="bg-present" src="./assets/img/stats-img.jpg" alt="You’ve found a neighborhood you love.">
+                            <div class="trend">
+                                <div class="qty-row">
+                                    <strong class="qty">40,000+</strong>
+                                    <img src="./assets/img/arrow-up.svg" alt="Arrow up" class="trend-arrow-up">
+                                </div>
+                                <div class="desc">By avarage for 2 bedroom apments in San Francisco, CA</div>
+                                <div class="separate"></div>
+                                <div class="list-user">
+                                    <div class="user-group">
+                                        <img src="./assets/img/user-1.webp" alt="User" class="user">
+                                        <img src="./assets/img/user-2.webp" alt="User" class="user">
+                                    </div>
+                                    <div class="user-group">
+                                        <img src="./assets/img/user-1.webp" alt="User" class="user">
+                                        <img src="./assets/img/user-2.webp" alt="User" class="user">
+                                        <img src="./assets/img/user-3.jpg" alt="User" class="user">
+                                        <img src="./assets/img/user-10.jpg" alt="User" class="user">
+                                    </div>
+                                    <div class="user-group">
+                                        <img src="./assets/img/user-8.webp" alt="User" class="user">
+                                        <img src="./assets/img/user-9.jpg" alt="User" class="user">
+                                        <img src="./assets/img/user-10.jpg" alt="User" class="user">
+                                    </div>
+                                    <div class="user-group">
+                                        <img src="./assets/img/user-3.jpg" alt="User" class="user">
+                                        <img src="./assets/img/user-4.jpg" alt="User" class="user">
+                                        <img src="./assets/img/user-5.jpeg" alt="User" class="user">
+                                        <img src="./assets/img/user-6.jpeg" alt="User" class="user">
+                                    </div>
+                                    <div class="user-group">
+                                        <img src="./assets/img/user-2.webp" alt="User" class="user">
+                                        <img src="./assets/img/user-3.jpg" alt="User" class="user">
+                                    </div>
+                                    <div class="user-group">
+                                        <img src="./assets/img/user-6.jpeg" alt="User" class="user">
+                                        <img src="./assets/img/user-7.jpg" alt="User" class="user">
+                                    </div>
+                                    <div class="user-group">
+                                        <img src="./assets/img/user-3.jpg" alt="User" class="user">
+                                        <img src="./assets/img/user-9.jpg" alt="User" class="user">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Info Right -->
+                        <div class="info">
+                            <h2 class="sub-title">You’ve found a neighborhood you love.</h2>
+                            <p class="desc">When you own a home, you’re committing to living in one location for a while. In a recent Trulia survey, we found that five out of six respondents said finding the right neighborhood </p>
+                        </div>
+                    </div>
+                    <div class="row des-qty">
+                        <div class="qty-item">
+                            <strong class="qty">2,500</strong>
+                            <div class="desc">Homes For Sale</div>
+                        </div>
+                        <div class="qty-item">
+                            <strong class="qty">2,500</strong>
+                            <div class="desc">Homes For Sale</div>
+                        </div>
+                        <div class="qty-item">
+                            <strong class="qty">2,500</strong>
+                            <div class="desc">Homes For Sale</div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </main>
     </body>
 </html>
