--- a/index.html
+++ b/index.html
@@ -438,6 +438,20 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Subscription -->
+            <div class="subs">
+                <div class="content">
+                    <div class="body">
+                        <div class="block-content">
+                            <h2 class="sub-title line-clamp">Subscribe to our Newsletter!</h2>
+                            <p class="desc line-clamp" style="--line-clamp: 3">Subscribe to our newsletter and stay updated.</p>
+                            <a href="#!" class="btn">Subscribe</a>
+                        </div>
+                        <img src="./assets/img/app-icon.svg" alt="App icon" class="app-icon">
+                    </div>
+                </div>
+            </div>
         </main>
     </body>
 </html>
