--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- Reset CSS -->
         <link rel="stylesheet" href="./assets/css/reset.css" />
+        <!-- Fonts -->
         <link rel="stylesheet" href="./assets/fonts/stylesheet.css" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
+        <!-- Styles -->
         <link rel="stylesheet" href="./assets/css/styles.css" />
         <!-- Font Awesome -->
         <link
@@ -18,7 +24,7 @@
 
         <title>Real Estate</title>
     </head>
-    <body style="height: 10000px">
+    <body>
         <main>
             <!-- Header -->
             <header class="fixed-header">
@@ -452,6 +458,62 @@
                     </div>
                 </div>
             </div>
+
+            <!-- Footer -->
+            <footer class="footer">
+                <div class="content">
+                    <div class="row-top">
+                        <div class="column">
+                            <h3 class="sub-title">Product</h3>
+                            <div class="list-item">
+                                <div class="item">Listing</div>
+                                <div class="item">Property</div>
+                                <div class="item">Agents</div>
+                                <div class="item">Blog</div>
+                            </div>
+                        </div>
+                        <div class="column">
+                            <h3 class="sub-title">Resources</h3>
+                            <div class="list-item">
+                                <div class="item">Our Homes</div>
+                                <div class="item">Member Stories</div>
+                                <div class="item">Video</div>
+                                <div class="item">Free trial</div>
+                            </div>
+                        </div>
+                        <div class="column">
+                            <h3 class="sub-title">Company</h3>
+                            <div class="list-item">
+                                <div class="item">Patnerships</div>
+                                <div class="item">Terms of use</div>
+                                <div class="item">Privacy</div>
+                                <div class="item">Sitemap</div>
+                            </div>
+                        </div>
+                        <div class="column">
+                            <h3 class="sub-title">Get in touch</h3>
+                            <p class="desc">You’ll find your next home, in any style you prefer.</p>
+                            <div class="social-list">
+                                <a href="#!" class="social">
+                                    <img src="./assets/img/facebook-icon.svg" alt="Facebook">
+                                </a>
+                                <a href="#!" class="social">
+                                    <img src="./assets/img/twitter-icon.svg" alt="Twitter">
+                                </a>
+                                <a href="#!" class="social">
+                                    <img src="./assets/img/lindedin-icon.svg" alt="Lindedin">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row-bottom">
+                        <a href="#!">
+                            <img src="./assets/img/logo.png" alt="Besnik." class="logo">
+                        </a>
+                        <p class="copyright">Copyright 2020.com, All rights reserved.</p>
+                    </div>
+                </div>
+            </footer>
         </main>
     </body>
 </html>
