header sticky and navigate

--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
                 <div class="content">
                     <nav class="navbar">
                         <!-- Logo -->
-                        <a class="logo" href="#">
+                        <a class="logo" href="/">
                             <img src="./assets/img/logo.png" alt="Besnik" />
                         </a>
                         <!-- Navigation -->
                         <ul>
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">Features</a></li>
-                            <li><a href="#">Services</a></li>
-                            <li><a href="#">Resources</a></li>
-                            <li><a href="#">Contact</a></li>
+                            <li><a href="#home">Home</a></li>
+                            <li><a href="#features">Features</a></li>
+                            <li><a href="#services">Services</a></li>
+                            <li><a href="#resources">Resources</a></li>
+                            <li><a href="#contact">Contact</a></li>
                         </ul>
                         <!-- Sign in/Sign up -->
                         <div class="actions">
@@ -52,7 +52,7 @@
             </header>
 
             <!-- Hero -->
-            <div class="hero-wrap">
+            <div id="home" class="hero-wrap">
                 <div class="content">
                     <div class="infor">
                         <p class="sub-title">Welcome to Besnik Agency</p>
@@ -115,33 +115,33 @@
                         </div>
                     </div>
                     <div class="company">
-                        <a href="#" class="company-logo">
+                        <a href="#!" class="company-logo">
                             <img
                                 src="./assets/img/logo-meundies.svg"
                                 alt="logo-meundies"
                             />
                         </a>
-                        <a href="#" class="company-logo">
+                        <a href="#!" class="company-logo">
                             <img
                                 src="./assets/img/logo-slack.svg"
                                 alt="logo-meundies"
                             />
                         </a>
                         <div class="main-company">
-                            <a href="#" class="company-logo">
+                            <a href="#!" class="company-logo">
                                 <img
                                     src="./assets/img/logo-amazon.svg"
                                     alt="logo-meundies"
                                 />
                             </a>
                         </div>
-                        <a href="#" class="company-logo">
+                        <a href="#!" class="company-logo">
                             <img
                                 src="./assets/img/logo-woo.svg"
                                 alt="logo-meundies"
                             />
                         </a>
-                        <a href="#" class="company-logo">
+                        <a href="#!" class="company-logo">
                             <img
                                 src="./assets/img/logo-sitepoint.svg"
                                 alt="logo-meundies"
@@ -152,7 +152,7 @@
             </div>
 
             <!-- Guides -->
-            <div class="guides">
+            <div id="services" class="guides">
                 <div class="content">
                     <h2 class="intro">How its works?</h2>
                     <div class="desc-intro">
@@ -216,7 +216,7 @@
             </div>
 
             <!-- Fearture -->
-            <div class="fearture">
+            <div id="features" class="fearture">
                 <div class="content">
                     <div class="header">
                         <h2 class="title">Featured Properties</h2>
@@ -372,7 +372,7 @@
             </div>
 
             <!-- Stats -->
-            <div class="stats">
+            <div id="resources" class="stats">
                 <div class="content">
                     <div class="row">
                         <!-- Image and Trending Left -->
@@ -446,7 +446,7 @@
             </div>
 
             <!-- Subscription -->
-            <div class="subs">
+            <div id="contact" class="subs">
                 <div class="content">
                     <div class="body">
                         <div class="block-content">
