--- a/index.html
+++ b/index.html
@@ -4,6 +4,25 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Real Estate</title>
+        <!-- Favicon -->
+        <link rel="apple-touch-icon" sizes="57x57" href="./assets/favicon/apple-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="./assets/favicon/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="./assets/favicon/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="./assets/favicon/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="./assets/favicon/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="./assets/favicon/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="./assets/favicon/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="./assets/favicon/apple-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192"  href="./assets/favicon/android-icon-192x192.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="./assets/favicon/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
+        <link rel="manifest" href="./assets/favicon/manifest.json">
+        <meta name="msapplication-TileColor" content="#ffffff">
+        <meta name="msapplication-TileImage" content="./assets/favicon/ms-icon-144x144.png">
+        <meta name="theme-color" content="#ffffff">
         <!-- Reset CSS -->
         <link rel="stylesheet" href="./assets/css/reset.css" />
         <!-- Fonts -->
@@ -21,36 +40,34 @@
             crossorigin="anonymous"
             referrerpolicy="no-referrer"
         />
-
-        <title>Real Estate</title>
     </head>
     <body>
-        <main>
-            <!-- Header -->
-            <header class="fixed-header">
-                <div class="content">
-                    <nav class="navbar">
-                        <!-- Logo -->
-                        <a class="logo" href="/">
-                            <img src="./assets/img/logo.png" alt="Besnik" />
-                        </a>
-                        <!-- Navigation -->
-                        <ul>
-                            <li><a href="#home">Home</a></li>
-                            <li><a href="#features">Features</a></li>
-                            <li><a href="#services">Services</a></li>
-                            <li><a href="#resources">Resources</a></li>
-                            <li><a href="#contact">Contact</a></li>
-                        </ul>
-                        <!-- Sign in/Sign up -->
-                        <div class="actions">
-                            <a class="sign-in" href="#">Sign in</a>
-                            <a class="btn sign-up" href="#">Sign up</a>
-                        </div>
-                    </nav>
-                </div>
-            </header>
+        <!-- Header -->
+        <header class="fixed-header">
+            <div class="content">
+                <nav class="navbar">
+                    <!-- Logo -->
+                    <a class="logo" href="#home">
+                        <img src="./assets/img/logo.png" alt="Besnik" />
+                    </a>
+                    <!-- Navigation -->
+                    <ul>
+                        <li><a href="#home">Home</a></li>
+                        <li><a href="#features">Features</a></li>
+                        <li><a href="#services">Services</a></li>
+                        <li><a href="#resources">Resources</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                    <!-- Sign in/Sign up -->
+                    <div class="actions">
+                        <a class="sign-in" href="#">Sign in</a>
+                        <a class="btn sign-up" href="#">Sign up</a>
+                    </div>
+                </nav>
+            </div>
+        </header>
 
+        <main>
             <!-- Hero -->
             <div id="home" class="hero-wrap">
                 <div class="content">
@@ -459,61 +476,62 @@
                 </div>
             </div>
 
-            <!-- Footer -->
-            <footer class="footer">
-                <div class="content">
-                    <div class="row-top">
-                        <div class="column">
-                            <h3 class="sub-title">Product</h3>
-                            <div class="list-item">
-                                <div class="item">Listing</div>
-                                <div class="item">Property</div>
-                                <div class="item">Agents</div>
-                                <div class="item">Blog</div>
-                            </div>
-                        </div>
-                        <div class="column">
-                            <h3 class="sub-title">Resources</h3>
-                            <div class="list-item">
-                                <div class="item">Our Homes</div>
-                                <div class="item">Member Stories</div>
-                                <div class="item">Video</div>
-                                <div class="item">Free trial</div>
-                            </div>
-                        </div>
-                        <div class="column">
-                            <h3 class="sub-title">Company</h3>
-                            <div class="list-item">
-                                <div class="item">Patnerships</div>
-                                <div class="item">Terms of use</div>
-                                <div class="item">Privacy</div>
-                                <div class="item">Sitemap</div>
-                            </div>
-                        </div>
-                        <div class="column">
-                            <h3 class="sub-title">Get in touch</h3>
-                            <p class="desc">You’ll find your next home, in any style you prefer.</p>
-                            <div class="social-list">
-                                <a href="#!" class="social">
-                                    <img src="./assets/img/facebook-icon.svg" alt="Facebook">
-                                </a>
-                                <a href="#!" class="social">
-                                    <img src="./assets/img/twitter-icon.svg" alt="Twitter">
-                                </a>
-                                <a href="#!" class="social">
-                                    <img src="./assets/img/lindedin-icon.svg" alt="Lindedin">
-                                </a>
-                            </div>
+        </main>
+
+        <!-- Footer -->
+        <footer class="footer">
+            <div class="content">
+                <div class="row-top">
+                    <div class="column">
+                        <h3 class="sub-title">Product</h3>
+                        <div class="list-item">
+                            <div class="item">Listing</div>
+                            <div class="item">Property</div>
+                            <div class="item">Agents</div>
+                            <div class="item">Blog</div>
                         </div>
                     </div>
-                    <div class="row-bottom">
-                        <a href="#!">
-                            <img src="./assets/img/logo.png" alt="Besnik." class="logo">
-                        </a>
-                        <p class="copyright">Copyright 2020.com, All rights reserved.</p>
+                    <div class="column">
+                        <h3 class="sub-title">Resources</h3>
+                        <div class="list-item">
+                            <div class="item">Our Homes</div>
+                            <div class="item">Member Stories</div>
+                            <div class="item">Video</div>
+                            <div class="item">Free trial</div>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <h3 class="sub-title">Company</h3>
+                        <div class="list-item">
+                            <div class="item">Patnerships</div>
+                            <div class="item">Terms of use</div>
+                            <div class="item">Privacy</div>
+                            <div class="item">Sitemap</div>
+                        </div>
+                    </div>
+                    <div class="column">
+                        <h3 class="sub-title">Get in touch</h3>
+                        <p class="desc">You’ll find your next home, in any style you prefer.</p>
+                        <div class="social-list">
+                            <a href="#!" class="social">
+                                <img src="./assets/img/facebook-icon.svg" alt="Facebook">
+                            </a>
+                            <a href="#!" class="social">
+                                <img src="./assets/img/twitter-icon.svg" alt="Twitter">
+                            </a>
+                            <a href="#!" class="social">
+                                <img src="./assets/img/lindedin-icon.svg" alt="Lindedin">
+                            </a>
+                        </div>
                     </div>
                 </div>
-            </footer>
-        </main>
+                <div class="row-bottom">
+                    <a href="#!">
+                        <img src="./assets/img/logo.png" alt="Besnik." class="logo">
+                    </a>
+                    <p class="copyright">Copyright 2020.com, All rights reserved.</p>
+                </div>
+            </div>
+        </footer>
     </body>
 </html>
